--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,17 @@ ext {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
     compileOnly 'com.fasterxml.jackson.core:jackson-core:2.6.3'
     compileOnly 'com.fasterxml.jackson.core:jackson-annotations:2.6.3'
     compileOnly 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+    compileOnly 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.3'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    testImplementation 'io.rest-assured:spring-mock-mvc:4.4.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
