Все тесты дописаны и работают, если будут идеи, добавлю ещё

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 exchangeURL=https://openexchangerates.org/api/
-exchangeKey=[Ваш API ключ openexchangerates.org]
+exchangeKey=
 baseCurrency=RUB
 gifsURL=https://api.giphy.com/v1/gifs/search?
-gifsKey=[Ваш API ключ giphy.com]
+gifsKey=
 faultGifURL=https://giphy.com/embed/d2W7eZX5z62ziqdi
 equalityGifURL=https://giphy.com/embed/3o6Zt6eQnQ8UUPhV60
