--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,4 @@ gifsURL=https://api.giphy.com/v1/gifs/search?
 gifsKey=
 faultGifURL=https://giphy.com/embed/d2W7eZX5z62ziqdi
 equalityGifURL=https://giphy.com/embed/3o6Zt6eQnQ8UUPhV60
+daysBefore=1
